--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@ html, body{
 .blinking-cursor {
     font-weight: 100;
     font-size: 19px;
-    color: #2E3D48;
+    color:white;
     -webkit-animation: 1s blink step-end infinite;
     -moz-animation: 1s blink step-end infinite;
     -ms-animation: 1s blink step-end infinite;
@@ -45,7 +45,7 @@ html, body{
       color: transparent;
     }
     50% {
-      color: black;
+      color: white;
     }
   }
   
